--- a/requirements.txt
+++ b/requirements.txt
@@ -1,59 +1,215 @@
-accelerate==0.33.0
+absl-py==2.1.0
+accelerate==0.31.0
+aiohttp==3.9.5
+aiosignal==1.3.1
+altair==5.4.1
+annotated-types==0.7.0
+anyio==4.4.0
 asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1698341106958/work
-certifi==2024.7.4
+astunparse==1.6.3
+async-timeout==4.0.3
+attrs==23.2.0
+audioread==3.0.1
+beautifulsoup4==4.12.3
+blinker==1.8.2
+blis==0.7.11
+bokeh==3.4.2
+cachetools==5.3.3
+catalogue==2.0.10
+certifi==2024.6.2
+cffi==1.16.0
 charset-normalizer==3.3.2
+click==8.1.7
+cloudpathlib==0.18.1
 colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1666700638685/work
 comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1710320294760/work
-debugpy @ file:///D:/bld/debugpy_1719378805462/work
+confection==0.1.5
+contourpy==1.2.1
+cymem==2.0.8
+dataclasses-json==0.6.7
+datasets==2.20.0
+debugpy @ file:///D:/bld/debugpy_1719378820880/work
 decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1641555617451/work
-exceptiongroup @ file:///home/conda/feedstock_root/build_artifacts/exceptiongroup_1720869315914/work
+Deprecated==1.2.14
+dill==0.3.8
+dirtyjson==1.0.8
+distro==1.9.0
+es-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/es_core_news_sm-3.7.0/es_core_news_sm-3.7.0-py3-none-any.whl#sha256=61e6e5530941f5880166855f09f60d7e6ba79ec1e8e45f96244bdb1eb169eb1d
+exceptiongroup @ file:///home/conda/feedstock_root/build_artifacts/exceptiongroup_1704921103267/work
 executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1698579936712/work
+faiss-cpu==1.7.4
+ffmpeg==1.4
 filelock==3.15.4
-fsspec==2024.6.1
-huggingface-hub==0.24.5
+flatbuffers==24.3.25
+frozenlist==1.4.1
+fsspec==2024.5.0
+gast==0.6.0
+gensim==4.3.2
+gitdb==4.0.11
+GitPython==3.1.43
+google-auth==2.30.0
+google-auth-oauthlib==1.2.0
+google-pasta==0.2.0
+greenlet==3.0.3
+grpcio==1.64.1
+h11==0.14.0
+h5py==3.11.0
+httpcore==1.0.5
+httpx==0.27.0
+huggingface-hub==0.23.4
 idna==3.7
-importlib_metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1721856510709/work
-ipykernel @ file:///D:/bld/ipykernel_1719845595208/work
-ipython @ file:///D:/bld/ipython_1719582682925/work
+importlib_metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1719361860083/work
+intel-openmp==2021.4.0
+ipykernel @ file:///D:/bld/ipykernel_1717717683217/work
+ipython @ file:///D:/bld/ipython_1717182928131/work
 jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1696326070614/work
 Jinja2==3.1.4
+joblib==1.4.2
+jsonschema==4.23.0
+jsonschema-specifications==2023.12.1
 jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1716472197302/work
-jupyter_core @ file:///D:/bld/jupyter_core_1710257295326/work
+jupyter_core @ file:///D:/bld/jupyter_core_1710257272359/work
+keras==2.15.0
+langcodes==3.4.0
+language_data==1.2.0
+lazy_loader==0.4
+libclang==18.1.1
+librosa==0.10.2.post1
+llama-cloud==0.0.6
+llama-index==0.10.31
+llama-index-agent-openai==0.2.7
+llama-index-cli==0.1.12
+llama-index-core==0.10.50.post1
+llama-index-embeddings-huggingface==0.2.2
+llama-index-embeddings-openai==0.1.10
+llama-index-indices-managed-llama-cloud==0.1.6
+llama-index-legacy==0.9.48
+llama-index-llms-ollama==0.2.2
+llama-index-llms-openai==0.1.23
+llama-index-multi-modal-llms-openai==0.1.6
+llama-index-program-openai==0.1.6
+llama-index-question-gen-openai==0.1.3
+llama-index-readers-file==0.1.25
+llama-index-readers-llama-parse==0.1.4
+llama-parse==0.4.4
+llamaindex-py-client==0.1.19
+llvmlite==0.43.0
+marisa-trie==1.2.0
+Markdown==3.6
+markdown-it-py==3.0.0
 MarkupSafe==2.1.5
+marshmallow==3.21.3
 matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1713250518406/work
+mdurl==0.1.2
+minijinja==2.0.1
+mkl==2021.4.0
+ml-dtypes==0.2.0
 mpmath==1.3.0
+msgpack==1.0.8
+multidict==6.0.5
+multiprocess==0.70.16
+murmurhash==1.0.10
+mypy-extensions==1.0.0
+narwhals==1.6.0
 nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1705850609492/work
 networkx==3.3
+nltk==3.8.1
+numba==0.60.0
 numpy==1.26.4
+oauthlib==3.2.2
+ollama==0.3.1
+openai==1.35.7
+opt-einsum==3.3.0
 packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1718189413536/work
+pandas==2.2.2
 parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1712320355065/work
 pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1602536217715/work
+pillow==10.3.0
 platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1715777629804/work
+pooch==1.8.2
+preshed==3.0.9
 prompt_toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1718047967974/work
-psutil @ file:///D:/bld/psutil_1719274712219/work
-pure_eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1721585709575/work
+protobuf==4.25.3
+psutil @ file:///D:/bld/psutil_1719274706785/work
+pure-eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1642875951954/work
+pyarrow==16.1.0
+pyarrow-hotfix==0.6
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pycparser==2.22
+pydantic==2.7.4
+pydantic_core==2.18.4
+pydeck==0.9.1
 Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1714846767233/work
+pypdf==4.2.0
+PyPDF2==3.0.1
 python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1709299778482/work
-pytube==15.0.0
-pytubefix==6.8.1
+pytubefix==6.13.1
+pytz==2024.1
 pywin32==306
 PyYAML==6.0.1
-pyzmq @ file:///D:/bld/pyzmq_1715024498246/work
-regex==2024.7.24
+pyzmq @ file:///D:/bld/pyzmq_1715024531233/work
+referencing==0.35.1
+regex==2024.5.15
 requests==2.32.3
+requests-oauthlib==2.0.0
+rich==13.7.1
+rpds-py==0.20.0
+rsa==4.9
 safetensors==0.4.3
-setuptools==72.1.0
+scikit-learn==1.5.0
+scipy==1.14.0
+sentence-transformers==2.7.0
+shellingham==1.5.4
 six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
+smart-open==7.0.4
+smmap==5.0.1
+sniffio==1.3.1
+soundfile==0.12.1
+soupsieve==2.5
+soxr==0.4.0
+spacy==3.7.5
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+SQLAlchemy==2.0.31
+srsly==2.4.8
 stack-data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1669632077133/work
-sympy==1.13.1
+streamlit==1.38.0
+striprtf==0.0.26
+sympy==1.12.1
+tbb==2021.13.0
+tenacity==8.4.2
+tensorboard==2.15.2
+tensorboard-data-server==0.7.2
+tensorflow==2.15.0
+tensorflow-estimator==2.15.0
+tensorflow-intel==2.15.0
+tensorflow-io-gcs-filesystem==0.31.0
+termcolor==2.4.0
+thinc==8.2.5
+threadpoolctl==3.5.0
+tiktoken==0.7.0
 tokenizers==0.19.1
-torch==2.4.0
-tornado @ file:///D:/bld/tornado_1717722831716/work
+toml==0.10.2
+torch==2.3.1+cu121
+torchaudio==2.3.1+cu121
+torchvision==0.18.1+cu121
+tornado @ file:///D:/bld/tornado_1717722834267/work
 tqdm==4.66.4
 traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1713535121073/work
-transformers==4.43.3
+transformers==4.44.2
+typer==0.12.3
+typing-inspect==0.9.0
 typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1717802530399/work
+tzdata==2024.1
 urllib3==2.2.2
+wasabi==1.1.3
+watchdog==4.0.2
 wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1704731205417/work
-wheel==0.43.0
+weasel==0.4.1
+Werkzeug==3.0.3
+wrapt==1.14.1
+xxhash==3.4.1
+xyzservices==2024.6.0
+yarl==1.9.4
 zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1718013267051/work
